--- a/ProjectDocs/archivalMaterials/Periodicals/Politiken/1931-03-01_politiken/proofing2_1931-03-01_politiken.html
+++ b/ProjectDocs/archivalMaterials/Periodicals/Politiken/1931-03-01_politiken/proofing2_1931-03-01_politiken.html
@@ -75,7 +75,7 @@
                   <section class="metadata">
                      <div>
                         <h2>Document Metadata</h2>
-                        <p>Kønskarakteren og dens Svingninger</p>
+                        <p>Politiken</p>
                         <p><span class="bold">Description of original
                               facsimile:</span> to be added. 
                         </p>
@@ -113,12 +113,9 @@
                            </li>
                            <li>Encoding completed by <span class="team" title="Project ID: co">Colin O'Connell</span>, <span class="team" title="Project ID: bt">Brenda Torres</span> 
                            </li>
-                           <li>
-                              Encoding assistance and/or XML proofing completed by
-                              <span class="team" title="Project ID: co">Colin O'Connell</span>
-                              
+                           <li>Encoding assistance and/or XML proofing completed by <span class="team" title="Project ID: co">Colin O'Connell</span>, <span class="team" title="Project ID: ccm">Caroline McCraw</span> 
                            </li>
-                           <li>XML transformed into HTML on <span class=".bg-success">12/02/2019</span> by <span class="team" title="Project ID: rjp">Rebecca J. Parker</span></li>
+                           <li>XML transformed into HTML on <span class=".bg-success">12/15/2019</span> by <span class="team" title="Project ID: rjp">Rebecca J. Parker</span></li>
                            <li>
                               HTML proofing completed by
                               <span class="team" title="Project ID: "></span>
