--- a/ProjectDocs/archivalMaterials/Periodicals/BerlingskeTidende/proofing2_1931-09-14_BT.html
+++ b/ProjectDocs/archivalMaterials/Periodicals/BerlingskeTidende/proofing2_1931-09-14_BT.html
@@ -14,7 +14,7 @@
       <meta name="author" content="Rebecca J. Parker" />
       <meta name="description" content="Lili Elbe Digital Archive - Contextual Material -  Lili Elvenæs, alias Ejnar Wegener, er afgaaet ved Døden. En tragisk Afslutning paa en fantastisk Livsskæbne. (September&#xA;                        1931)" />
       <meta name="keywords" content="man into woman, lili elbe, transgender, modernism, digital edition, collation, TEI" />
-      <link rel="stylesheet" href="../../includes/main.css" />
+      <link rel="stylesheet" href="main.css" />
       <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Baumans" />
       <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abel" />
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
