updated vice versa issues 1 and 2 proofing views and XML filenames

--- a/ProjectDocs/archivalMaterials/Periodicals/ViceVersa/1934-10-06ViceVersa185/1934-10-06_ViceVersa-185.html
+++ b/ProjectDocs/archivalMaterials/Periodicals/ViceVersa/1934-10-06ViceVersa185/1934-10-06_ViceVersa-185.html
@@ -14,7 +14,7 @@
       <meta name="author" content="Rebecca J. Parker" />
       <meta name="description" content="Lili Elbe Digital Archive - Contextual Material - un Homme change de sexe&#xA;               D'après les documents authentiques et scientifiques réunis par&#xA;                     Niels Hoyer&#xA;            " />
       <meta name="keywords" content="man into woman, lili elbe, transgender, modernism, digital edition, collation, TEI" />
-      <link rel="stylesheet" href="../../includes/main.css" />
+         <link rel="stylesheet" href="main.css" />
       <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Baumans" />
       <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abel" />
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
@@ -132,7 +132,7 @@
                               <span class="team" title="Project ID: am">Anna McCue</span>
                               
                            </li>
-                           <li>XML transformed into HTML on <span class=".bg-success">03/23/2020</span> by <span class="team" title="Project ID: rjp">Rebecca J. Parker</span></li>
+                           <li>XML transformed into HTML on <span class=".bg-success">03/30/2020</span> by <span class="team" title="Project ID: rjp">Rebecca J. Parker</span></li>
                            <li>HTML proofing completed by <span class="team" title="Project ID: ac">Aliana Capati</span>, <span class="team" title="Project ID: cb">Cristiana Bertola</span> 
                            </li>
                            <li>
